<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paris">Paris</string>
    <string name="temp">"12C \nCloudy"</string>

    <string name="mon">Monday</string>
    <string name="sunny">Sunny</string>
    <string name="tsunny">30C-35C</string>

    <string name="tue">Tuesday</string>
    <string name="rainy">Rainy</string>
    <string name="trainy">20C-25C</string>

    <string name="wed">Wednesday</string>
    <string name="thun">Rain Thunder</string>
    <string name="tthun">16C-23C</string>

    <string name="thu">Thursday</string>
    <string name="cloud">PartlyCloudy</string>
    <string name="tcloud">23C-27C</string>

    <string name="fri">Friday</string>
    <string name="snowy">Snowy</string>
    <string name="tsnowy">0C-5C</string>

    <string name="sat">Saturday</string>
    <string name="trainy2">18C-25C</string>

    <string name="sun">Sunday</string>
    <string name="tsunny2">28C-33C</string>
</resources>