<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0px"
        android:background="@color/forecast_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="56px">

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="50px"
                android:text="@string/mon" />

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:src="@drawable/sunny1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="25px"
                    android:layout_weight="1"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"
                    android:text="@string/tsunny" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="56px">

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="50px"
                android:text="@string/tue" />

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:src="@drawable/rainy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="25px"
                    android:layout_weight="1"
                    android:text="@string/rainy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"
                    android:text="@string/trainy" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="56px">

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="50px"
                android:text="@string/wed" />

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:src="@drawable/rain_thunder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="25px"
                    android:layout_weight="1"
                    android:text="@string/thun" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"
                    android:text="@string/tthun" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="56px">

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="50px"
                android:text="@string/thu" />

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:src="@drawable/partlycloudy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="25px"
                    android:layout_weight="1"
                    android:text="@string/cloud" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"
                    android:text="23C-27C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="56px">

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="50px"
                android:text="@string/fri" />

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:src="@drawable/snowy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="25px"
                    android:layout_weight="1"
                    android:text="Snowy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"
                    android:text="0C-5C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="56px">

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="50px"
                android:text="@string/sat" />

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:src="@drawable/rainy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="25px"
                    android:layout_weight="1"
                    android:text="@string/rainy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"
                    android:text="18C-25C" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="56px">

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="50px"
                android:text="Sunday" />

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:src="@drawable/sunny" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="25px"
                    android:layout_weight="1"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300px"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"
                    android:text="28C-33C" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>